Map redistribution on webpages & FAQ wording fix
Map License: addendum to redistribution section - requires written permission if redistributing in a place where the crediting & linking would be visible (i.e. Gamebanana page); things like gameserver hosting would be unaffected.

FAQ: fixed wording for the (Why is there no “Yes Derivations” license option for compiled maps?) section so it uses the correct name for the ASSET / VMF License.

--- a/licenses/tf2mcl-map-default.html
+++ b/licenses/tf2mcl-map-default.html
@@ -1,7 +1,7 @@
 <h1 id="the-tf2mapsnet-creative-license---compiled-map">The TF2Maps.net Creative License - COMPILED MAP</h1>
 <p>These license terms are an agreement between you and the creator of this work. Please read them before downloading or using this work. By using this work, you acknowledge that you have read and agree to be bound by these license terms. If you do not agree to these terms, you may not use this work.</p>
 <h3 id="you-are-free-to">You are free to:</h3>
-<p><strong>Share as a BSP</strong> - copy and redistribute the map. You may do so only in the format given to you. You may not extract the map’s contents and redistribute them.</p>
+<p><strong>Share as a BSP</strong> - copy and redistribute the map. You may do so only in the format given to you. You may not extract the map’s contents and redistribute them. In any place where the required crediting & linking would be visible (i.e. Gamebanana page), you must ask the creator for written permission to redistribute there.</p>
 <h3 id="under-the-following-terms">Under the following terms:</h3>
 <p><strong>Attribution</strong> - You must give appropriate credit and provide a link to the page you downloaded the map from.</p>
 <p><strong>Non-Commercial</strong> - You may not use the map for commercial purposes. You may not upload this map to the Steam Workshop.</p>
