Wording change: "You must ask" -> "You must get"
No reason to be unclear.

Changed all the "you must ask for permission in writing" instances to "you must get written permission".

--- a/licenses/tf2mcl-definitions.html
+++ b/licenses/tf2mcl-definitions.html
@@ -12,6 +12,6 @@
 <p><strong>Source SDK Mod, Team Fortress 2 Mod, Source Mod</strong></p>
 <p>Since early 2025, Valve has allowed modifications of Team Fortress 2 based on the official <a href="https://github.com/ValveSoftware/source-sdk-2013">Source SDK</a> on Steam. These are effectively standalone games using TF2 assets. Other Valve games also bear this feature. This license applies to them as well.</p>
 <p><strong>Written Permission</strong></p>
-<p>Going against any of the terms set in this license requires written permission by the author(s) of the work. Generally, asking via DM is perfectly sufficient.</p>
+<p>Going against any of the terms set in this license requires written permission by the author(s) of the work. Generally, getting this via DM is perfectly sufficient.</p>
 <p><strong>Compiling</strong></p>
 <p>Turning a .VMF file and a bunch of loose Assets into a .BSP that can be played in Team Fortress 2 or another Source Engine game.</p>
