--- a/licenses.html
+++ b/licenses.html
@@ -5,17 +5,21 @@
 <p>Please don&#39;t hesitate to contact us via Forum DMs or Discord if you have any questions.</p>
 <p>We currently offer the following licenses:</p>
 <h3 id="compiled-map-license">Compiled Map License</h3>
-<p>TF2MCL: Compiled Map - Default
-TF2MCL: Compiled Map - No SDK Use</p>
+<ul>
+	<li>TF2MCL: Compiled Map - Default</li>
+	<li>TF2MCL: Compiled Map - No SDK Use</li>
+</ul>
 <h3 id="asset--vmf-license">Asset / VMF License</h3>
-<p>TF2MCL: Asset / VMF - Default
-TF2MCL: Asset / VMF - No Derivations
-TF2MCL: Asset / VMF - No Workshop Uploading
-TF2MCL: Asset / VMF - No SDK Use
-TF2MCL: Asset / VMF - No Derivations + No Workshop Uploading
-TF2MCL: Asset / VMF - No Derivations + No SDK Use
-TF2MCL: Asset / VMF - No Derivations + No SDK Use + No Workshop Uploading</p>
-<p>Alternatively, you may dedicate your work to the <strong>Public Domain</strong>, giving up all rights on the work and allowing others to use it without any restrictions. You can also select <strong>Custom License</strong> if you want to supply your own with the download or in the download description.</p>
+<ul>
+	<li>TF2MCL: Asset / VMF - Default</li>
+	<li>TF2MCL: Asset / VMF - No Derivations</li>
+	<li>TF2MCL: Asset / VMF - No Workshop Uploading</li>
+	<li>TF2MCL: Asset / VMF - No SDK Use</li>
+	<li>TF2MCL: Asset / VMF - No Derivations + No Workshop Uploading</li>
+	<li>TF2MCL: Asset / VMF - No Derivations + No SDK Use</li>
+	<li>TF2MCL: Asset / VMF - No Derivations + No SDK Use + No Workshop Uploading</li>
+	<li>Alternatively, you may dedicate your work to the <strong>Public Domain</strong>, giving up all rights on the work and allowing others to use it without any restrictions. You can also select <strong>Custom License</strong> if you want to supply your own with the download or in the download description.</li>
+</ul>
 <p>FLOWCHART IMAGE HERE</p>
 <h1 id="faq">FAQ</h1>
 <p><strong>Which license should I pick?</strong>
