--- a/licenses/tf2mcl-asset-nosdk-noworkshophtml.html
+++ b/licenses/tf2mcl-asset-nosdk-noworkshophtml.html
@@ -1,4 +1,4 @@
-<h1 id="the-tf2mapsnet-creative-license---asset--uncompiled-map---no-workshop-uploading">The TF2Maps.net Creative License - ASSET / UNCOMPILED MAP - NO WORKSHOP UPLOADING</h1>
+<h1 id="the-tf2mapsnet-creative-license---asset--uncompiled-map---no-derivations---no-sdk-use---no-workshop-uploading">The TF2Maps.net Creative License - ASSET / UNCOMPILED MAP - NO DERIVATIONS - NO SDK USE - NO WORKSHOP UPLOADING</h1>
 <p>These license terms are an agreement between you and the creator of this work. Please read them before downloading or using this work. By using this work, you acknowledge that you have read and agree to be bound by these license terms. If you do not agree to these terms, you may not use this work.</p>
 <h3 id="you-are-free-to">You are free to:</h3>
 <p><strong>Share in a BSP</strong> - copy and redistribute the work. You may do so only if the work is compiled into a map.</p>
@@ -6,3 +6,4 @@
 <p><strong>Attribution</strong> - You must give appropriate credit and provide a link to the page you downloaded the work from. This applies even if you modify the work.</p>
 <p><strong>Non-Commercial, except to Valve</strong> - You may not use the work for commercial purposes, except by including it in a map offered to Valve on the Steam Workshop. If you do so, the creator of the work must be considered a contributor to your map and must be listed as such on the Steam Workshop. Steam Subscriber Agreement rules apply.</p>
 <p><strong>+++ NO WORKSHOP UPLOADING +++</strong> You must get written permission from the creator before uploading this asset or derivations of it to the Steam Workshop (even if inside a map).</p>
+<p><strong>+++ NO SDK USE +++</strong> You must get written permission from the creator before redistributing this asset or derivations of it as part of a Team Fortress 2/Source SDK Mod.</p>
